--- a/src/main/resources/templates/admin_panel/_product.html
+++ b/src/main/resources/templates/admin_panel/_product.html
@@ -195,7 +195,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="book_long_description_input" maxlength="255"
-                                       class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -445,7 +445,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="ebook_long_description_input" maxlength="255"
-                                          class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -658,7 +658,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="audiobook_long_description_input" maxlength="255"
-                                          class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -791,7 +791,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="ebook_reader_long_description_input" maxlength="255"
-                                          class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1126,7 +1126,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="ebook_reader_case_long_description_input" maxlength="255"
-                                          class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
@@ -1301,7 +1301,7 @@
                                     Long Description
                                 </div>
                                 <textarea type="text" id="book_case_long_description_input" maxlength="255"
-                                          class="deneme form-control different-control w-100" rows="3"
+                                          class="long_desc_textarea form-control different-control w-100" rows="3"
                                           placeholder="Long Description" required="required"></textarea>
                             </div>
                         </div>
